k8s/manifests/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.basix.cloud`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport
      middlewares:
        - name: default-headers
    - kind: Rule
      match: Host(`argocd.basix.cloud`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: basix-cloud-staging-tls
